# fin-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  current.md  debug_docling.py  package.json  pyproject.toml  render.yaml  tailwind.config.js  tsconfig.json
.claude/skills/: README.md
ccsdk/: bulk-import.ts  cc-client.ts  custom-tools.ts  fin-agent-prompt.ts  session.ts  sql-guard.ts  test-agent.ts  types.ts  websocket-handler.ts
ccsdk/__tests__/: sql-guard.test.ts
client/: App.tsx  README.md  globals.css
client/components/: ChatInterface.tsx
client/config/: suggestions.yaml
client/hooks/: useFileSelection.ts
client/utils/: plaid.ts
database/: config.ts
docker/: entrypoint.sh
docs/: declarative_extractor_schema.md  plugin_workflow.md
docs/dev/: release.md
docs/examples/: example_extractor.py  example_spec.yaml
docs/json/: fin_analyze.md
fin_cli/: README.md
fin_cli/fin_analyze/: assets.py  main.py  metrics.py  registry.py  render.py  temporal.py  types.py
fin_cli/fin_edit/: __init__.py  main.py
fin_cli/fin_enhance/: importer.py  main.py  pipeline.py  review.py
fin_cli/fin_export/: __init__.py  exporter.py  main.py
fin_cli/fin_extract/: asset_contract.py  declarative.py  main.py  plugin_loader.py  types.py  validator.py
fin_cli/fin_query/: executor.py  main.py  render.py  types.py
fin_cli/fin_scrub/: __init__.py  default_config.yaml  main.py
fin_cli/shared/: cli.py  config.py  database.py  dataframe.py  exceptions.py  importers.py  logging.py  merchants.py  models.py  paths.py  preferences.py  utils.py
plans/: deprecate_analyzers_improve_subscriptions.md  fin_cli_implementation_plan.md  fin_extract_payments_filter_plan.md  fix-skill-relative-paths.md  plan_agent_skills_101925.md  plan_asset_tracker_skill_fixes_121025.md  plan_asset_tracking_121025.md  plan_asset_transfer_121025.md  plan_bulk_import_review_flow_100425.md  plan_bulk_import_statements_100325.md  plan_chase_account_branding_092425.md  plan_chase_prime_statement_092425.md  plan_cli_entrypoints_110325.md  plan_debug_docling_100625.md  plan_docling_perf_100725.md  plan_extractor_refactor_092825.md  plan_fin_agent_122924.md  plan_fin_agent_dashboard_100325.md  plan_fin_analyze_category_aggregations_092525.md  plan_fin_analyze_csv_support_103025.md  plan_fin_analyze_phase8_092425.md  plan_fin_analyze_unusual_highlights_092625.md  plan_fin_edit_import_transactions_102125.md  plan_fin_enhance_auto_mode_092425.md  plan_fin_enhance_json_default_092425.md  plan_fin_export_resilient_subscriptions_092625.md  plan_fin_extract_docling_and_custom_extractors_100425.md  plan_fin_extract_stateless_092425.md  plan_fin_extract_stdout_cleanup_100825.md  plan_fin_query_092425.md  plan_fin_query_mcp_100325.md  plan_fin_scrub_102025.md  plan_fix_pytest_failures_100925.md  plan_llm_statement_processor_102025.md  plan_merchant_patterns_092425.md  plan_mercury_enriched_gap_102325.md  plan_open_source_cleanup_103025.md  plan_pdfplumber_fix_100825.md  plan_plaid_web_link_101525.md  plan_production_deploy_120425.md  (+21 more)
scrubbed/: vishal-kapur-and-sneha-kapur-2550-monthly-statement-2025-09-scrubbed.txt
server/: server.ts
server/__tests__/: plaid-helpers.test.ts  plaid-token-store.test.ts
server/plaid/: client.ts  config.ts  fetch.ts  helpers.ts  token-store.ts
skills/: README.md
skills/statement-processor/: SKILL.md  postprocess.py  preprocess.py
skills/transaction-categorizer/: SKILL.md
specs/: spec_finagent_implementation_v0.1.md  spec_finagent_product_v0.1.md
tests/asset_tracker/: test_asset_tracker_postprocess.py  test_asset_tracker_preprocess.py
tests/cli/: test_entrypoints.py
tests/fin_analyze/: conftest.py  test_analyzers.py  test_asset_analyzers.py  test_cli.py  test_render.py
tests/fin_edit/: test_asset_cli_commands.py  test_asset_ingestion_contract.py  test_fin_edit.py
tests/fin_enhance/: test_categorizer.py  test_cli_enhance.py  test_hybrid_categorizer.py  test_importer.py
tests/fin_export/: __init__.py  conftest.py  test_cli.py
tests/fin_extract/: test_asset_contract_validator.py  test_asset_csv_cli.py  test_asset_json_cli.py  (+9 more)
web_client/: App.tsx  README.md  globals.css  index.html
(+165 files in other folders)
